# trp-service

./: .gitignore  docker-compose.yml
backend2.0/: .flake8  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  second_requirements.txt
backend2.0/app/: errors.py  exception_handlers.py  main.py
backend2.0/app/database/: constants.py  database.py  utils.py
backend2.0/app/database/crud/: __init__.py  chapters.py  csv_files.py  entities.py  methods.py  processes.py  sql_batch.py  templates.py  update_order_id.py  variables.py
backend2.0/app/database/models/: __init__.py  core.py  custom_rows.py  data_sources.py  functions.py  notes.py  settings.py  variables.py
backend2.0/app/database/schemas/: __init__.py  core.py  custom_rows.py  data_sources.py  functions.py  notes.py  settings.py  variables.py
backend2.0/app/generator/: core.py  profit.py  utils.py  variables.py
backend2.0/app/profit/: __init__.py  connections.py  schemas.py  utils.py
backend2.0/app/routers/: chapter.py  check_profit.py  database.py  entity.py  generator.py  profit.py  sources.py  sql_batch.py  template.py  variables.py
backend2.0/examples/: basis_template.json  dashboard_KnEmployee.json  dashboard_KnEmployee_new.json  dashboard_cmforecast.json  dashboard_fbsalesquotation.json  dashboard_fbsalesquotation_v2.json  functions_metainfo.json  generated_cmforecast.json  generated_fbsalesquotation.json  single_row_generated_fbsalesquotation.json
backend2.0/scripts/: deploy.sh  review.sh
backend2.0/scripts/insert_live_process/: main.py  new_process.json  process.json
(+6 files in other folders)
