[tool.poetry]
name = "rocket_backend"
version = "2.0.0a"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
SQLAlchemy = {version = ">=1.4,<1.4.23", extras = ["mypy"]}
sqlalchemy-pydantic-orm = "^0.1.0"
loguru = "^0.5.3"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
psycopg2-binary = "^2.9.1"
orjson = "^3.6.0"
Faker = "^8.10.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.14.0"
pdoc3 = "^0.9.2"
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"
isort = "^5.9.2"
types-orjson = "^0.1.1"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true

# --strict
#disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
